Update projects section with repositories from L0V3Y0UT00

--- a/index.html
+++ b/index.html
@@ -320,159 +320,168 @@ share my learning journey on GitHub.</p>
             <div class="row">
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/absensi-laravel.png" class="card-img" alt="absensi-laravel">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">Absensi</h5>
+                            <h5 class="card-text">VSCODE-THEMED-PORTFOLIO</h5>
+                            <p class="card-text small">Personal portfolio with Visual Studio Code IDE theme.</p>
                             <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#LARAVEL</li>
-                                <li>#BOOTSTRAP</li>
+                                <li>#TYPESCRIPT</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/purunkode.png" class="card-img" alt="cek-tiket">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">E-Course (deleted)</h5>
+                            <h5 class="card-text">BROWSER-FRIEND</h5>
+                            <p class="card-text small">GPT in your browser.</p>
                             <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#LARAVEL</li>
-                                <li>#VUEJS</li>
-                                <li>#TAILWINDCSS</li>
+                                <li>#TYPESCRIPT</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/cek-tiket.jpg" class="card-img" alt="cek-tiket">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">(Android) Pemesanan Tiket</h5>
+                            <h5 class="card-text">TIKTOK-API</h5>
+                            <p class="card-text small">Unofficial TikTok API Wrapper In Python.</p>
                             <ul class="tag">
-                                <li>#ANDROID</li>
-                                <li>#KOTLIN</li>
-                                <li>#REST API</li>
+                                <li>#PYTHON</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/pemesanan-tiket.png" class="card-img" alt="pemesanan-tiket">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">(Desktop) Pemesanan Tiket</h5>
+                            <h5 class="card-text">SIGMADOWNLOADER</h5>
+                            <p class="card-text small">A downloader utility.</p>
                             <ul class="tag">
-                                <li>#DESKTOP</li>
-                                <li>#C SHARP</li>
-                                <li>#SQL SERVER</li>
+                                <li>#PYTHON</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/toko-desktop.png" class="card-img" alt="toko-desktop">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">(Desktop) Toko</h5>
+                            <h5 class="card-text">YOUTUBE.PK</h5>
+                            <p class="card-text small">YouTube related utility.</p>
                             <ul class="tag">
-                                <li>#DESKTOP</li>
-                                <li>#C SHARP</li>
-                                <li>#SQL SERVER</li>
+                                <li>#PYTHON</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/absensi-sekolah.png" class="card-img" alt="absensi-sekolah">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-text">Absensi</h5>
+                            <h5 class="card-text">KNIGHTBOT-MD</h5>
+                            <p class="card-text small">Simple WhatsApp bot to manage groups.</p>
                             <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#PHP</li>
-                                <li>#BOOTSTRAP</li>
-                                <li>#JQUERY</li>
-                                <li>#MYSQL</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 js-slidein my-3">
-                    <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/informasi-covid-19.png" class="card-img" alt="informasi-covid-19">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-text">Informasi COVID-19</h5>
-                            <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#BOOTSTRAP</li>
-                                <li>#REST API</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 js-slidein my-3">
-                    <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/toko-web.png" class="card-img" alt="toko-web">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-text">(WEB) Toko</h5>
-                            <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#PHP</li>
-                                <li>#BOOTSTRAP</li>
-                                <li>#JQUERY</li>
-                                <li>#MYSQL</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 js-slidein my-3">
-                    <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/tabugan-siswa.png" class="card-img" alt="tabugan-siswa">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-text">Tabungan Siswa</h5>
-                            <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#PHP</li>
-                                <li>#BOOTSTRAP</li>
-                                <li>#MYSQL</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 js-slidein my-3">
-                    <div class="card h-100">
-                        <div class="m-3">
-                            <img src="img/cbt-sekolah.png" class="card-img" alt="informasi-covid-19">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-text">CBT Sekolah</h5>
-                            <ul class="tag">
-                                <li>#WEB</li>
-                                <li>#CSS</li>
-                                <li>#PHP</li>
-                                <li>#BOOTSTRAP</li>
                                 <li>#JAVASCRIPT</li>
-                                <li>#MYSQL</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">STOCK-SHEET</h5>
+                            <p class="card-text small">Store manager application.</p>
+                            <ul class="tag">
+                                <li>#HTML</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">ITEM-LIST-CLOTH</h5>
+                            <p class="card-text small">Clothing item list manager.</p>
+                            <ul class="tag">
+                                <li>#HTML</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">NOMORE</h5>
+                            <p class="card-text small">PHP project.</p>
+                            <ul class="tag">
+                                <li>#PHP</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">MINI-AI</h5>
+                            <p class="card-text small">AI related experiment.</p>
+                            <ul class="tag">
+                                <li>#AI</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">CREATOR-CLUB</h5>
+                            <p class="card-text small">A community for creators.</p>
+                            <ul class="tag">
+                                <li>#WEB</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">0XANSR.GITHUB.IO</h5>
+                            <p class="card-text small">Official portfolio site.</p>
+                            <ul class="tag">
+                                <li>#HTML</li>
                             </ul>
                         </div>
                     </div>
