feat: add certifications section and move credly badge

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link" href="#home">Home</a>
                     <a class="nav-link" href="#experience">Experience</a>
+                    <a class="nav-link" href="#certifications">Certifications</a>
                     <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScPhSaQUQ6Tz0wy7BFB0SGz-9w8mAssUTLjKPusfzrwbDGxCA/viewform">Skills</a>
                     <a class="nav-link" href="#projects">Projects</a>
                     <a class="nav-link" href="#contact">Contact</a>
@@ -122,6 +123,24 @@ share my learning journey on GitHub.</p>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="certifications" class="pt-4"></div>
+
+    <div class="label-menu js-slidein">
+        <p>
+            Certifications
+        </p>
+    </div>
+
+    <div class="certifications">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12 text-center js-slidein">
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div>
                 </div>
             </div>
         </div>
@@ -513,8 +532,7 @@ share my learning journey on GitHub.</p>
         </div>
     </div>
 
-
-    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
     <div class="footer shadow-lg">
         <div class="container">
