feat: add Microsoft Azure AI Fundamentals certification to portfolio

--- a/index.html
+++ b/index.html
@@ -207,9 +207,33 @@
 
     <div class="certifications">
         <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-12 text-center js-slidein">
-                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div>
+            <div class="row justify-content-center">
+                <!-- Existing Badge -->
+                <div class="col-md-4 text-center js-slidein mb-4">
+                    <div class="card h-100 border-0 shadow-sm p-3">
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div>
+                    </div>
+                </div>
+                <!-- New Azure AI Badge -->
+                <div class="col-md-6 js-slidein mb-4">
+                    <div class="card h-100 border-0 shadow-sm p-4">
+                        <div class="row align-items-center">
+                            <div class="col-sm-4 text-center">
+                                <img src="https://images.credly.com/size/340x340/images/4136ced8-75d5-4afb-8677-40b6236e2672/azure-ai-fundamentals-600x600.png" alt="Azure AI Fundamentals" class="img-fluid mb-3" style="max-height: 120px;">
+                            </div>
+                            <div class="col-sm-8">
+                                <h5 class="font-weight-bold">Microsoft Certified: Azure AI Fundamentals</h5>
+                                <p class="small text-muted mb-2">Issued by Microsoft</p>
+                                <p class="small">Demonstrated foundational knowledge of machine learning (ML) and artificial intelligence (AI) concepts and related Microsoft Azure services.</p>
+                                <div class="mt-2">
+                                    <span class="badge badge-primary mr-1">Azure Bot Services</span>
+                                    <span class="badge badge-primary mr-1">Azure Machine Learning</span>
+                                    <span class="badge badge-primary mr-1">Cognitive Services</span>
+                                </div>
+                                <a href="https://docs.microsoft.com/learn/certifications/azure-ai-fundamentals" target="_blank" class="btn btn-link btn-sm p-0 mt-3 text-primary">Verify Credential →</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
