Replace existing badge with new Azure AI badge

--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
     <div class="certifications">
         <div class="container">
             <div class="row justify-content-center">
-                <!-- Existing Badge -->
+                <!-- Existing Badge 
                 <div class="col-md-4 text-center js-slidein mb-4">
                     <div class="card h-100 border-0 shadow-sm p-3">
                         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div>
                     </div>
-                </div>
+                </div> -->
                 <!-- New Azure AI Badge -->
                 <div class="col-md-6 js-slidein mb-4">
                     <div class="card h-100 border-0 shadow-sm p-4">
@@ -230,7 +230,7 @@
                                     <span class="badge badge-primary mr-1">Azure Machine Learning</span>
                                     <span class="badge badge-primary mr-1">Cognitive Services</span>
                                 </div>
-                                <a href="https://docs.microsoft.com/learn/certifications/azure-ai-fundamentals" target="_blank" class="btn btn-link btn-sm p-0 mt-3 text-primary">Verify Credential →</a>
+                                <a href="https://www.credly.com/badges/9cf11f2f-f03b-45a4-b411-e6735c1d401b/embedded" target="_blank" class="btn btn-link btn-sm p-0 mt-3 text-primary">Verify Credential →</a>
                             </div>
                         </div>
                     </div>
