Update certification description for clarity

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <div class="col-sm-8">
                                 <h5 class="font-weight-bold">Microsoft Certified: Azure AI Fundamentals</h5>
                                 <p class="small text-muted mb-2">Issued by Microsoft</p>
-                                <p class="small">Demonstrated foundational knowledge of machine learning (ML) and artificial intelligence (AI) concepts and related Microsoft Azure services.</p>
+                                <p class="small">Earners of the Azure AI Fundamentals certification have demonstrated foundational knowledge of machine learning (ML) and artificial intelligence (AI) concepts and related Microsoft Azure services.</p>
                                 <div class="mt-2">
                                     <span class="badge badge-primary mr-1">Azure Bot Services</span>
                                     <span class="badge badge-primary mr-1">Azure Machine Learning</span>
