style: modernize UI with premium shadows, rich hover effects and lazy loading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <div id="particles-js" style="position: fixed; top: 0; bottom: 0; left: 0; right: 0;"></div>
+    <div id="particles-js" style="position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;"></div>
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-lg-1"></div>
                 <div class="col-md-4 col-lg-4">
-                    <img src="img/server-room.png" alt="Server Room" class="img-fluid d-none d-md-block animated pulse infinite">
+                    <img loading="lazy" src="img/server-room.png" alt="Server Room" class="img-fluid d-none d-md-block animated pulse infinite">
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-3 d-none d-md-block">
-                                            <img src="img/trophy.png" alt="Trophy">
+                                            <img loading="lazy" src="img/trophy.png" alt="Trophy">
                                         </div>
                                         <div class="col-12 col-md-7">
                                             <h4 class="position-relative mb-4">Join the race</h4>
@@ -181,7 +181,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-3 d-none d-md-block">
-                                            <img src="img/trophy.png" alt="Trophy">
+                                            <img loading="lazy" src="img/trophy.png" alt="Trophy">
                                         </div>
                                         <div class="col-12 col-md-7">
                                             <h4 class="position-relative mb-4">Join the race</h4>
@@ -219,7 +219,7 @@
                     <div class="card h-100 border-0 shadow-sm p-4">
                         <div class="row align-items-center">
                             <div class="col-sm-4 text-center">
-                                <img src="https://images.credly.com/size/340x340/images/4136ced8-75d5-4afb-8677-40b6236e2672/azure-ai-fundamentals-600x600.png" alt="Azure AI Fundamentals" class="img-fluid mb-3" style="max-height: 120px;">
+                                <img loading="lazy" src="https://images.credly.com/size/340x340/images/4136ced8-75d5-4afb-8677-40b6236e2672/azure-ai-fundamentals-600x600.png" alt="Azure AI Fundamentals" class="img-fluid mb-3" style="max-height: 120px;">
                             </div>
                             <div class="col-sm-8">
                                 <h5 class="font-weight-bold">Microsoft Certified: Azure AI Fundamentals</h5>
@@ -266,20 +266,20 @@
                     <div class="col-md-6 js-slidein mb-5">
                         <h4>Web Technologies</h4>
                         <div class="row text-center">
-                            <div class="col-4 mb-3"><img src="img/html.png" style="height: 40px;"><br><small>HTML</small></div>
-                            <div class="col-4 mb-3"><img src="img/css.png" style="height: 40px;"><br><small>CSS</small></div>
-                            <div class="col-4 mb-3"><img src="img/bootstrap.png" style="height: 40px;"><br><small>Bootstrap</small></div>
-                            <div class="col-4 mb-3"><img src="img/tailwindcss.png" style="height: 40px;"><br><small>Tailwind CSS</small></div>
-                            <div class="col-4 mb-3"><img src="img/vue.png" style="height: 40px;"><br><small>Vue.js</small></div>
-                            <div class="col-4 mb-3"><img src="img/laravel.png" style="height: 40px;"><br><small>Laravel</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/html.png" style="height: 40px;"><br><small>HTML</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/css.png" style="height: 40px;"><br><small>CSS</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/bootstrap.png" style="height: 40px;"><br><small>Bootstrap</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/tailwindcss.png" style="height: 40px;"><br><small>Tailwind CSS</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/vue.png" style="height: 40px;"><br><small>Vue.js</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/laravel.png" style="height: 40px;"><br><small>Laravel</small></div>
                         </div>
                     </div>
                     <div class="col-md-6 js-slidein mb-5">
                         <h4>Databases</h4>
                         <div class="row text-center">
-                            <div class="col-4 mb-3"><img src="img/mysql.png" style="height: 40px;"><br><small>MySQL</small></div>
-                            <div class="col-4 mb-3"><img src="img/sql-server.png" style="height: 40px;"><br><small>SQL Server</small></div>
-                            <div class="col-4 mb-3"><img src="img/phpmyadmin.png" style="height: 40px;"><br><small>phpMyAdmin</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/mysql.png" style="height: 40px;"><br><small>MySQL</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/sql-server.png" style="height: 40px;"><br><small>SQL Server</small></div>
+                            <div class="col-4 mb-3"><img loading="lazy" src="img/phpmyadmin.png" style="height: 40px;"><br><small>phpMyAdmin</small></div>
                         </div>
                     </div>
                     <div class="col-md-6 js-slidein mb-5">
@@ -317,7 +317,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">VSCODE-THEMED-PORTFOLIO</h5>
@@ -331,7 +331,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">BROWSER-FRIEND</h5>
@@ -345,7 +345,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">TIKTOK-API</h5>
@@ -359,7 +359,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">SIGMADOWNLOADER</h5>
@@ -373,7 +373,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">YOUTUBE.PK</h5>
@@ -387,7 +387,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">KNIGHTBOT-MD</h5>
@@ -401,7 +401,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">STOCK-SHEET</h5>
@@ -415,7 +415,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">ITEM-LIST-CLOTH</h5>
@@ -429,7 +429,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">NOMORE</h5>
@@ -443,7 +443,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">MINI-AI</h5>
@@ -457,7 +457,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">CREATOR-CLUB</h5>
@@ -471,7 +471,7 @@
                 <div class="col-md-4 js-slidein my-3">
                     <div class="card h-100">
                         <div class="m-3 text-center">
-                            <img src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/github.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
                         </div>
                         <div class="card-body">
                             <h5 class="card-text">0XANSR.GITHUB.IO</h5>
@@ -499,11 +499,11 @@
         <div class="contact">
             <div class="container">
                 <div class="text-center">
-                    <img src="img/0xAnsR.jpg" class="img-fluid pp mt-5 js-slidein" alt="0xAnsR">
+                    <img loading="lazy" src="img/0xAnsR.jpg" class="img-fluid pp mt-5 js-slidein" alt="0xAnsR">
                     <h1 class="js-slidein"><b>Anas</b> Raza</h1>
                     <p class="js-slidein">Fullstack Web Developer</p>
 
-   <div class="js-slidein"> <img src="https://img.icons8.com/color/48/000000/facebook-new.png" class="smd" id="go-fb" /> <img src="https://img.icons8.com/color/48/000000/telegram-app.png" class="smd" id="go-tl" /> <img src="https://img.icons8.com/fluent/48/000000/instagram-new.png" class="smd" id="go-ig" /> <img src="https://img.icons8.com/fluent/48/000000/github.png" class="smd" id="go-github" />
+   <div class="js-slidein"> <img loading="lazy" src="https://img.icons8.com/color/48/000000/facebook-new.png" class="smd" id="go-fb" /> <img loading="lazy" src="https://img.icons8.com/color/48/000000/telegram-app.png" class="smd" id="go-tl" /> <img loading="lazy" src="https://img.icons8.com/fluent/48/000000/instagram-new.png" class="smd" id="go-ig" /> <img loading="lazy" src="https://img.icons8.com/fluent/48/000000/github.png" class="smd" id="go-github" />
                 </div>
             </div>
         </div>
