docs: create CHANGELOG.md and add v2.1.0 info to footer

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
     <div class="footer shadow-lg">
         <div class="container">
-            <p>&copy; 2020 Designed by Ans Raza</p>
+            <p>&copy; 2020 Designed by Ans Raza | <span class="badge badge-secondary">v2.1.0</span></p>
         </div>
     </div>
 
